<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#1Affffff"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/unlock_locked"
        android:src="@drawable/ic_lock_white_24px" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/unlock_unlocked"
        android:src="@drawable/ic_lock_open_white_24px" />

    <TextView
        android:id="@+id/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/unlock_instructions"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/img_thumb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/unlock_thumb"
        android:src="@drawable/unlock_thumb" />

</RelativeLayout>